[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Danylo Petrakivskyi", email = "danylopetrik@gmail.com"},
]
dependencies = [
    "scikit-learn>=1.2.2",
    "pandas>=1.5.3",
    "jupyterlab>=3.6.2",
    "jupyter-resource-usage>=0.7.2",
    "tqdm>=4.65.0",
    "seaborn>=0.12.2",
    "ipywidgets>=8.0.5",
]
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}

[tool.pdm]
